# loro-c

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
cmake/: BuildRustStaticlib.cmake  loro-manual-targets.cmake  loro.pc.in  loroConfig.cmake.in
conformance/: CMakeLists.txt
conformance/include/: loro.hpp
conformance/include/loro/: loro_ext.hpp
conformance/tests/: test_cursor.cpp  test_ext_containers.cpp  test_ext_subscriptions.cpp  test_ext_undo.cpp  test_value_fidelity.cpp
examples/: CMakeLists.txt  basic_text.cpp  cursor_tracking.cpp  json_sync.cpp  rich_text.cpp  subscribe_events.cpp  sync_two_docs.cpp
include/: loro.hpp
include/loro/: loro.h  loro.hpp  loro_ext.hpp
loro-c-api/: Cargo.toml  cbindgen.toml  test_api_check.rs
loro-c-api/src/: awareness.rs  callbacks.rs  commit.rs  cursor.rs  diff.rs  doc.rs  error.rs  event.rs  fractional_index.rs  import_status.rs  jsonpath.rs  lib.rs  macros.rs  style.rs  undo.rs  value.rs  value_or_container.rs  value_typed.rs  version.rs
loro-c-api/src/container/: any.rs  counter.rs  list.rs  map.rs  mod.rs  movable_list.rs  text.rs  tree.rs
pm/: CBINDGEN_PLAN.md  GAPS_PLAN.md  RESHAPE.md  UPVERT.md  UPVERT_1.md  UPVERT_2.md  UPVERT_3.md
tests/: CMakeLists.txt  test_advanced.cpp  test_awareness.cpp  test_c_only.c  test_counter.cpp  test_cursor.cpp  test_diff.cpp  test_doc.cpp  test_ephemeral_store.cpp  test_ext.cpp  test_fractional_index.cpp  test_g6.cpp  test_get_container.cpp  test_helpers.hpp  test_jsonpath.cpp  test_list.cpp  test_map.cpp  test_map_list.cpp  test_movable_list.cpp  test_navigate.cpp  test_richtext.cpp  test_smoke.cpp  test_subscriptions.cpp  test_sync.cpp  test_text.cpp  test_text_mark.cpp  test_text_utf8.cpp  test_tree.cpp  test_undo.cpp  test_value_fidelity.cpp  test_version_vector.cpp
tests/consumer/: CMakeLists.txt  main.cpp
